--- a/src/theme/default/package.json
+++ b/src/theme/default/package.json
@@ -13,6 +13,7 @@
     "mini-css-extract-plugin": "^0.9.0"
   },
   "dependencies": {
+    "github-markdown-css": "^4.0.0",
     "highlight.js": "^10.0.2",
     "marked": "^1.0.0",
     "mathjax": "^3.0.5",
