--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple Markdown editor",
   "main": "index.js",
   "scripts": {
-    "test": "electron ."
+    "test": "electron .",
+    "dist": "electron-builder"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "homepage": "https://github.com/sparkmemo/editor#readme",
   "devDependencies": {
     "electron": "^8.2.5",
+    "electron-builder": "^22.6.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
@@ -30,5 +32,12 @@
   "dependencies": {
     "electron-store": "^5.1.1",
     "lodash": "^4.17.15"
+  },
+  "build": {
+    "appId": "com.sparkmemo.editor",
+    "productName": "SparkMEMO Editor",
+    "directories": {
+      "output": "dist"
+    }
   }
 }
