--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "editor",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A simple Markdown editor",
   "main": "index.js",
   "scripts": {
@@ -38,6 +38,10 @@
     "productName": "SparkMEMO Editor",
     "directories": {
       "output": "dist"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
     }
   }
 }
