--- a/package.json
+++ b/package.json
@@ -1,117 +1,37 @@
 {
-  "name": "@wtongze/sparkdown",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@babel/core": "7.12.3",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
-    "@primer/css": "^15.2.0",
-    "@svgr/webpack": "5.4.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^12.19.9",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.7",
-    "babel-preset-react-app": "^10.0.0",
-    "bfj": "^7.0.2",
-    "camelcase": "^6.1.0",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "4.3.0",
-    "dotenv": "8.2.0",
-    "dotenv-expand": "5.1.0",
-    "electron": "^11.1.0",
-    "eslint": "^7.11.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^3.9.2",
-    "eslint-webpack-plugin": "^2.1.0",
-    "file-loader": "6.1.1",
-    "fontsource-roboto": "^3.1.5",
-    "fs-extra": "^9.0.1",
-    "html-webpack-plugin": "4.5.0",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "26.6.0",
-    "jest-circus": "26.6.0",
-    "jest-resolve": "26.6.0",
-    "jest-watch-typeahead": "0.6.1",
-    "mini-css-extract-plugin": "0.11.3",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
-    "pnp-webpack-plugin": "1.6.4",
-    "postcss-flexbugs-fixes": "4.2.1",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "8.0.1",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "5.0.2",
-    "prompts": "2.4.0",
-    "react": "^17.0.1",
-    "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.1",
-    "react-dom": "^17.0.1",
-    "react-markdown": "^5.0.3",
-    "react-refresh": "^0.8.3",
-    "react-syntax-highlighter": "^15.4.3",
-    "remark-gfm": "^1.0.0",
-    "resolve": "1.18.1",
-    "resolve-url-loader": "^3.1.2",
-    "sass-loader": "8.0.2",
-    "semver": "7.3.2",
-    "style-loader": "1.3.0",
-    "terser-webpack-plugin": "4.2.3",
-    "ts-pnp": "1.2.0",
-    "url-loader": "4.1.1",
-    "web-vitals": "^0.2.4",
-    "webpack": "4.44.2",
-    "webpack-dev-server": "3.11.0",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4"
-  },
+  "name": "sparkmemo",
+  "version": "0.2.0",
+  "description": "A minimalist designed Markdown editor.",
+  "main": "index.js",
   "scripts": {
-    "start": "BROWSER=none node scripts/start.js",
-    "electron": "electron .",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "start": "electron .",
+    "build": "electron-builder"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wtongze/sparkmemo.git"
   },
-  "browserslist": {
-    "production": [
-      "chrome 87"
-    ],
-    "development": [
-      "chrome 87"
-    ]
+  "keywords": [
+    "sparkdown",
+    "markdown",
+    "editor"
+  ],
+  "author": "Tongze Wang",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/wtongze/sparkmemo/issues"
   },
+  "homepage": "https://github.com/wtongze/sparkmemo#readme",
   "devDependencies": {
-    "@types/react-syntax-highlighter": "^13.5.0",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "eslint": "^7.15.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "electron": "^11.1.1",
+    "electron-builder": "^22.9.1"
   },
-  "main": "electron/index.js",
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
+  "dependencies": {
+    "@highlightjs/cdn-assets": "^10.5.0",
+    "@primer/css": "^15.2.0",
+    "katex": "^0.12.0",
+    "lodash": "^4.17.20",
+    "marked": "^1.2.7",
+    "mermaid": "^8.8.4"
   }
 }
