--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sparkmemo",
   "version": "0.2.0",
   "description": "A minimalist designed Markdown editor.",
-  "main": "index.js",
+  "main": "index.cjs",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder"
@@ -24,7 +24,9 @@
   "homepage": "https://github.com/wtongze/sparkmemo#readme",
   "devDependencies": {
     "electron": "^11.1.1",
-    "electron-builder": "^22.9.1"
+    "electron-builder": "^22.9.1",
+    "eslint": "^7.17.0",
+    "eslint-plugin-jsdoc": "^30.7.13"
   },
   "dependencies": {
     "@highlightjs/cdn-assets": "^10.5.0",
