--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "electron": "^11.1.1",
     "electron-builder": "^22.9.1",
     "eslint": "^7.17.0",
-    "eslint-plugin-jsdoc": "^30.7.13"
+    "eslint-plugin-jsdoc": "^30.7.13",
+    "husky": "^4.3.6",
+    "pretty-quick": "^3.1.0"
   },
   "dependencies": {
     "@highlightjs/cdn-assets": "^10.5.0",
@@ -35,5 +37,10 @@
     "lodash": "^4.17.20",
     "marked": "^1.2.7",
     "mermaid": "^8.8.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
