--- a/package.json
+++ b/package.json
@@ -26,17 +26,21 @@
     "electron": "^11.1.1",
     "electron-builder": "^22.9.1",
     "eslint": "^7.17.0",
-    "eslint-plugin-jsdoc": "^30.7.13",
-    "husky": "^4.3.6",
+    "eslint-plugin-jsdoc": "^31.0.1",
+    "husky": "^4.3.7",
     "pretty-quick": "^3.1.0"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.1.0",
     "@highlightjs/cdn-assets": "^10.5.0",
+    "@mdi/font": "^5.8.55",
     "@primer/css": "^15.2.0",
     "katex": "^0.12.0",
     "lodash": "^4.17.20",
     "marked": "^1.2.7",
-    "mermaid": "^8.8.4"
+    "mermaid": "^8.8.4",
+    "vue": "^2.6.12",
+    "vuetify": "^2.4.2"
   },
   "husky": {
     "hooks": {
